--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "wabot-aq",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/saipulanuar/bot-aq",
+  "repository": "https://github.com/BeluNgas/wabot-aq-1",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"]
 }
