--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "𝙆𝙞𝙣𝙜 𝙊𝙛 𝘽𝙚𝙖𝙧",
+  "name": "𝙆𝙞𝙣𝙜 𝙊𝙛 Sange",
   "version": "2.5.1",
   "description": "Customizable WhatsApp Bot",
   "depecrated": false,
